--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,20 +1,14 @@
 @use '../../../../styles/settings' as *;
 @use '../../../../styles/settings/breakpoints' as *;
 
-/******************************
-    Base Panel Styling
-*******************************/
 .panel-formcontextualhelp {
+  @include elevation-1;
   padding: $spacing-400 $spacing-300;
   background: $bg-primary;
   display: block;
-  border-radius: var(--Corner-radius-Mid, 8px);
+  border-radius: $border-radius-mid;
   border: 1px solid $color-shade-navy-40;
   margin-bottom: $spacing-600;
-
-  // Elevation-1
-  box-shadow: 0px 2px 4px 0px rgba(22, 44, 69, 0.20);
-  width: 100%;
 
   > legend {
     margin-bottom: 0;
@@ -35,10 +29,7 @@
 
   .panel-formcontextualhelp__title {
     color: $text-dark;
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $font-family;
     font-size: $size-font-h6;
-    font-style: normal;
     font-weight: $font-weight-bold;
     line-height: 125%;
     letter-spacing: $letter-spacing-default;
@@ -87,14 +78,12 @@
       color: $text-dark;
       font-weight: 500;
       text-decoration: none;
-      text-underline: none;
       transition: color 0.2s ease;
 
       &:hover,
       &:focus {
         color: $text-accent;
         text-decoration: none;
-        text-underline: none;
       }
 
       &:visited {
