--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -183,8 +183,6 @@ main .form form .field-wrapper.field-invalid .field-description {
     background-size: contain;
   }
 
-
-
   // Fluid side padding: scales between 16px and 64px from mobile to desktop
   padding-left: clamp(1rem, 5vw, 4rem);
   padding-right: clamp(1rem, 5vw, 4rem);
@@ -192,8 +190,8 @@ main .form form .field-wrapper.field-invalid .field-description {
 /* ------------------------------
    Light Blue Gradient background
 ------------------------------ */
-main.wizard--bg-light,
-main.wizard--bg-mid {
+.wizard--bg-light,
+.wizard--bg-mid {
   color: $text-primary;
 
   h1,
@@ -237,7 +235,7 @@ main.wizard--bg-mid {
 /* ------------------------------
    Dark Blue Gradient background
 ------------------------------ */
-main.wizard--bg-dark {
+.wizard--bg-dark {
   color: $color-white;
 
   .text-wrapper,
@@ -295,16 +293,16 @@ main.wizard--bg-dark {
 
 // Background pattern and gradients
 
-main.wizard--bg-dark,
-main.wizard--bg-mid,
-main.wizard--bg-light {
+.wizard--bg-dark,
+.wizard--bg-mid,
+.wizard--bg-light {
   position: relative;
   z-index: 1;
 }
 
 // Default pattern for desktop
-main.wizard--bg-dark::before,
-main.wizard--bg-mid::before {
+.wizard--bg-dark::before,
+.wizard--bg-mid::before {
   content: '';
   position: absolute;
   inset: 0;
@@ -316,7 +314,7 @@ main.wizard--bg-mid::before {
   pointer-events: none;
 }
 
-main.wizard--bg-light::before {
+.wizard--bg-light::before {
   content: '';
   position: absolute;
   inset: 0;
@@ -330,23 +328,23 @@ main.wizard--bg-light::before {
 
 // Mobile: remove background images
 @media (max-width: 743px) {
-  main.wizard--bg-dark::before,
-  main.wizard--bg-mid::before,
-  main.wizard--bg-light::before {
+  .wizard--bg-dark::before,
+  .wizard--bg-mid::before,
+  .wizard--bg-light::before {
     background-image: none;
   }
 }
 
 // Tablet override: top right for dark and mid
 @include media('tablet') {
-  main.wizard--bg-dark::before,
-  main.wizard--bg-mid::before {
+  .wizard--bg-dark::before,
+  .wizard--bg-mid::before {
     top: 100px;
     background-image: url('../../images/mymsd-unity-pattern-top-right.svg');
     background-position: top right;
   }
 
-  main.wizard--bg-light::before {
+  .wizard--bg-light::before {
     top: 100px;
     background-image: url('../../images/mymsd-unity-pattern-top-right-light.svg');
     background-position: top right;
@@ -355,13 +353,13 @@ main.wizard--bg-light::before {
 
 // Desktop override: bottom left for dark and mid
 @include media('desktop') {
-  main.wizard--bg-dark::before,
-  main.wizard--bg-mid::before {
+  .wizard--bg-dark::before,
+  .wizard--bg-mid::before {
     background-image: url('../../images/mymsd-unity-pattern-bottom-left.svg');
     background-position: bottom left;
   }
 
-  main.wizard--bg-light::before {
+  .wizard--bg-light::before {
     background-image: url('../../images/mymsd-unity-pattern-top-right-light.svg');
     background-position: top right;
   }
