--- a/styles/bootstrap/_variables.scss
+++ b/styles/bootstrap/_variables.scss
@@ -507,9 +507,9 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 540px,
   md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px,
+  lg: 1051px,
+  xl: 1051px,
+  xxl: 1051px,
 ) !default;
 // scss-docs-end container-max-widths
 
@@ -520,7 +520,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns: 12 !default;
-$grid-gutter-width: $spacing-600 !default;
+$grid-gutter-width: $spacing-400 !default; // !!! This setting the gutter spacing
 $grid-row-columns: 6 !default;
 
 // Container padding
