style(AEM grid): adjusting container padding

--- a/styles/bootstrap/_variables.scss
+++ b/styles/bootstrap/_variables.scss
@@ -525,7 +525,8 @@ $grid-row-columns: 6 !default;
 
 // Container padding
 
-$container-padding-x: $grid-gutter-width !default;
+// $container-padding-x: $grid-gutter-width !default; // ORIGINAL BOOTSTRAP
+$container-padding-x: $spacing-600 !default;
 
 // Components
 //
