--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,5 +1,5 @@
 @use '../../../../styles/settings' as *;
-@use '../../../../styles/base' as *;  // Testing RW
+@use '../../../../styles/base' as *;
 
 .field-summary {
   padding: 64px 0;
