style(AEM grid): wizard padding tweak JSP 1.2

--- a/blocks/form/components/languagepanel/languagepanel.scss
+++ b/blocks/form/components/languagepanel/languagepanel.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-main .form form .panel-repeatable-panel__languagepanel {
+.panel-repeatable-panel__languagepanel {
   [name='proficiency'] {
     display: none;
   }
