--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -309,7 +309,7 @@ main.wizard--bg-light::before {
   position: absolute;
   inset: 0;
   z-index: 0;
-  background-image: url('../../images/mymsd-unity-pattern-bottom-left.svg');
+  background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
   background-repeat: no-repeat;
   background-size: auto;
   background-position: bottom left;
@@ -327,7 +327,7 @@ main.wizard--bg-light::before {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
     top: 100px;
-    background-image: url('../../images/mymsd-unity-pattern-top-right.svg');
+    background-image: url('/images/mymsd-unity-pattern-top-right.svg');
     background-position: top right;
     background-repeat: no-repeat;
     background-size: auto;
@@ -337,7 +337,7 @@ main.wizard--bg-light::before {
 @include media('desktop') {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
-    background-image: url('../../images/mymsd-unity-pattern-bottom-left.svg');
+    background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
     background-position: bottom left;
   }
 }
