--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -4,36 +4,22 @@
   display: none !important;
 }
 
-.wizard--bg-dark {
-  .wizard {
-    background: linear-gradient(
-                    135deg,
-                    $color-accent 25%,
-                    $color-primary-navy 100%
-    );
-  }
+.wizard--bg-dark .wizard {
+  background: linear-gradient(135deg, $color-accent 25%, $color-primary-navy 100%);
 }
 
-.wizard--bg-mid {
-  .wizard {
-    background: linear-gradient(
-                    135deg,
-                    $color-shade-blue-10 25%,
-                    $color-shade-blue-25 100%
-    );
-  }
+.wizard--bg-mid .wizard {
+  background: linear-gradient(135deg, $color-shade-blue-10 25%, $color-shade-blue-25 100%);
 }
 
-.wizard--bg-light {
-  .wizard {
-    background: var(--Background-Light-Secondary, #F5FAFD);
-
-  }
+.wizard--bg-light .wizard {
+  background: var(--Background-Light-Secondary, #F5FAFD);
 }
 
 .wizard {
   min-height: calc(100vh - $nav-height - $footer-height);
   height: 100%;
+  background: linear-gradient(135deg, $color-accent 25%, $color-primary-navy 100%);
 
   @media (max-width: 1279px) {
     padding-left: $spacing-600;
@@ -41,26 +27,20 @@
     padding-top: $spacing-600;
   }
 
-  background: linear-gradient(
-                  135deg,
-                  $color-accent 25%,
-                  $color-primary-navy 100%
-  );
-  
-  .field-save-changes{
-      display: none;
-      margin-left: auto;
+  .field-save-changes {
+    display: none;
+    margin-left: auto;
   }
-  
-  &.from-review{
-      .field-save-changes{
-          display: block;
-      }
-      
-      .wizard-button-prev,
-      .wizard-button-next{
-          display: none;
-      }
+
+  &.from-review {
+    .field-save-changes {
+      display: block;
+    }
+
+    .wizard-button-prev,
+    .wizard-button-next {
+      display: none;
+    }
   }
 
   .current-wizard-step {
@@ -162,17 +142,7 @@ main .form form .wizard .wizard-button-wrapper .field-wrapper {
   flex: unset;
 }
 
-main
-form
-.wizard
-> .current-wizard-step.panel-wrapper:first-of-type
-~ .wizard-button-wrapper
-> .wizard-button-prev,
-main
-form
-.wizard
-> .current-wizard-step.panel-wrapper:last-of-type
-~ .wizard-button-wrapper
-> .wizard-button-next {
+main form .wizard > .current-wizard-step.panel-wrapper:first-of-type ~ .wizard-button-wrapper > .wizard-button-prev,
+main form .wizard > .current-wizard-step.panel-wrapper:last-of-type ~ .wizard-button-wrapper > .wizard-button-next {
   display: none;
 }
