--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -1,9 +1,11 @@
 @use '../../../../styles/settings' as *;
 
+// Hide menu items globally
 .wizard .wizard-menu-items {
   display: none !important;
 }
 
+// Background themes
 .wizard--bg-dark .wizard {
   background: linear-gradient(135deg, $color-accent 25%, $color-primary-navy 100%);
 }
@@ -16,15 +18,14 @@
   background: var(--Background-Light-Secondary, #F5FAFD);
 }
 
+// Wizard container
 .wizard {
   min-height: calc(100vh - $nav-height - $footer-height);
   height: 100%;
   background: linear-gradient(135deg, $color-accent 25%, $color-primary-navy 100%);
 
   @media (max-width: 1279px) {
-    padding-left: $spacing-600;
-    padding-right: $spacing-600;
-    padding-top: $spacing-600;
+    padding: $spacing-600;
   }
 
   .field-save-changes {
@@ -86,12 +87,11 @@
     gap: 50px;
     flex-wrap: wrap;
     list-style: none;
-    padding: 0;
+    padding: 0 0 var(--form-wizard-padding) 0;
     margin: 0;
     font-weight: var(--form-fieldset-legend-font-weight);
     font-size: var(--form-fieldset-legend-font-size);
     color: var(--form-fieldset-legend-color);
-    padding-bottom: var(--form-wizard-padding);
     grid-column: span 12;
   }
 
@@ -130,10 +130,7 @@
 }
 
 // Utility/hiding logic
-main .form form .wizard > fieldset > legend {
-  display: none;
-}
-
+main .form form .wizard > fieldset > legend,
 main .form form .wizard > fieldset:not(.current-wizard-step) {
   display: none;
 }
