--- a/styles/base/_wizard-buttons.scss
+++ b/styles/base/_wizard-buttons.scss
@@ -49,8 +49,7 @@
     &::before {
       @extend %common-wizard-button;
       content: '';
-      /*background-image: url('../../icons/icon-wizard-next-button-white-arrow-right.svg');*/
-      background-image: url('../icons/icon-wizard-next-button-white-arrow-right.svg');
+      background-image: url('../../../../icons/icon-wizard-next-button-white-arrow-right.svg');
       order: 1;
       margin-left: 0.5rem;
     }
@@ -65,7 +64,7 @@
     &::before {
       @extend %common-wizard-button;
       content: '';
-      background-image: url('../../icons/icon-wizard-back-button-navy-arrow-left.svg');
+      background-image: url('../../../../icons/icon-wizard-back-button-navy-arrow-left.svg');
 
       margin-right: 0.5rem;
     }
