--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,3 +1,5 @@
+
+
 @use '../../../../styles/settings' as *;
 @use '../../../../styles/base' as *;
 
@@ -34,8 +36,8 @@
     padding-right: $spacing-600;
 
     &:not(:last-child) {
-      padding-top: $spacing-600;
-      padding-bottom: $spacing-600;
+    /*  padding-top: $spacing-600;
+      padding-bottom: $spacing-600;*/
     }
 
     &:last-child {
@@ -156,8 +158,8 @@
   letter-spacing: 0;
 
   &:not(:last-child):not(:only-child) {
-    padding-bottom: $spacing-300;
-    margin-bottom: $spacing-300;
+   /* padding-bottom: $spacing-300;
+    margin-bottom: $spacing-300;*/
   }
 }
 
@@ -196,3 +198,13 @@
   margin-bottom: $spacing-100;
 }
 
+.summary-entry [data-name^='textinput'],
+.summary-entry [class*='textinput'] {
+  color: $text-dark-primary;
+  font-family: $font-family;
+  font-style: normal;
+  font-size: $size-font-body-default;
+  line-height: 160%;
+  margin-top: $spacing-100;
+  margin-bottom: $spacing-100;
+}
