--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,5 +1,3 @@
-
-
 @use '../../../../styles/settings' as *;
 @use '../../../../styles/base' as *;
 
@@ -36,8 +34,8 @@
     padding-right: $spacing-600;
 
     &:not(:last-child) {
-    /*  padding-top: $spacing-600;
-      padding-bottom: $spacing-600;*/
+      padding-top: $spacing-600;
+      padding-bottom: $spacing-600;
     }
 
     &:last-child {
@@ -49,21 +47,15 @@
   .summary-entry__course,
   .summary-entry__title,
   .summary-entry__licenceClassTitle,
-  .summary-entry__cb_english_proficiency {
+  .summary-entry__cb_english_proficiency,
+  .summary-entry__endorsementsTitle {
     color: $text-dark-primary;
     font-family: $font-family;
     font-style: normal;
     line-height: 160%;
-    font-size: $size-font-body-default;
-  }
-
-  .summary-entry__language,
-  .summary-entry__course,
-  .summary-entry__title,
-  .summary-entry__licenceClassTitle, .summary-entry__endorsementsTitle {
     font-weight: 700;
-    margin-bottom: $spacing-100;
     font-size: $size-font-body-default;
+    margin-bottom: $spacing-100;
   }
 
   .summary-entry__personal-summary {
@@ -85,7 +77,8 @@
   .summary-entry__specific_days_cb,
   .summary-entry__proficiency,
   .summary-entry__licence-class,
-  .summary-entry__reliable-transport, .summary-entry__endorsements {
+  .summary-entry__reliable-transport,
+  .summary-entry__endorsements {
     color: $text-dark-primary;
     font-family: $font-family;
     font-style: normal;
@@ -101,51 +94,104 @@
     padding-bottom: 0;
   }
 
-  &.field-summary-work-preferences {
-    .p-small {
-      color: $text-dark-primary;
+  &.field-summary-work-preferences .p-small {
+    color: $text-dark-primary;
+  }
+
+  .row.item {
+    display: flex;
+    flex-direction: column;
+
+    .col-md-11,
+    .col-md-1 {
+      width: 100%;
+    }
+
+    .summary-entry {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: nowrap;
+
+      .summary-entry__title {
+        font-weight: bold;
+        margin-bottom: 0;
+      }
+
+      .edit {
+        margin-top: 0;
+        text-align: right;
+      }
+    }
+
+    @include media('tablet') {
+      flex-direction: row;
+      align-items: flex-start;
+
+      .col-md-11,
+      .col-md-1 {
+        width: auto;
+      }
+
+      .summary-entry {
+        flex-wrap: wrap;
+        align-items: flex-start;
+      }
     }
   }
 }
 
 .field-summary-personal-details {
   h2 {
-    color: $color-primary-navy;
+    color: pink !important;
   }
 
-  span {
-    color: $text-dark-primary;
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: $spacing-500;
+    justify-content: flex-start;
+  }
+
+  .col-md-4,
+  .col-md-2,
+  .col-md-3 {
+    display: flex;
+    align-items: flex-start;
     font-family: $font-family;
     font-size: $size-font-body-default;
     font-style: normal;
     font-weight: $font-weight-bold;
     line-height: 160%;
-    vertical-align: middle;
+    color: $text-dark-primary;
+
+    i {
+      display: inline-block;
+      width: $spacing-450;
+      height: $spacing-450;
+      margin-right: $spacing-200;
+      background-repeat: no-repeat;
+      background-size: contain;
+      vertical-align: top;
+    }
+
+    span {
+      display: inline-block;
+      vertical-align: top;
+      word-break: break-word;
+    }
   }
 
-  .address i,
-  .phone i,
-  .email i {
-    display: inline-block;
-    width: $spacing-450;
-    height: $spacing-450;
-    margin-right: $spacing-200;
-    background-repeat: no-repeat;
-    background-size: contain;
-    vertical-align: middle;
+  .edit {
+    display: inline-flex;
+    align-items: flex-start;
+    text-align: right;
   }
 
-  .address i {
-    background-image: url('../../../../../icons/icon-x.svg');
-  }
-
-  .phone i {
-    background-image: url('../../../../../../icons/icon-x.svg');
-  }
-
-  .email i {
-    background-image: url('../../../../../../../icons/icon-x.svg');
-  }
+  .address i { background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg'); }
+  .phone i { background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg'); }
+  .email i { background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg'); }
 }
 
 .summary-entry {
@@ -158,46 +204,17 @@
   letter-spacing: 0;
 
   &:not(:last-child):not(:only-child) {
-   /* padding-bottom: $spacing-300;
-    margin-bottom: $spacing-300;*/
+    padding-bottom: $spacing-300;
+    margin-bottom: $spacing-300;
   }
 }
 
-// Job Titles
 .summary-entry [data-name^='selected-item-job-title'],
-.summary-entry [class*='selected-item-job-title'] {
-  color: $text-dark-primary;
-  font-family: $font-family;
-  font-style: normal;
-  font-size: $size-font-body-default;
-  line-height: 160%;
-  margin-top: $spacing-100;
-  margin-bottom: $spacing-100;
-}
-
-// Radio Buttons
+.summary-entry [class*='selected-item-job-title'],
 .summary-entry [data-name^='radiobutton'],
-.summary-entry [class*='radiobutton'] {
-  color: $text-dark-primary;
-  font-family: $font-family;
-  font-style: normal;
-  font-size: $size-font-body-default;
-  line-height: 160%;
-  margin-top: $spacing-100;
-  margin-bottom: $spacing-100;
-}
-
+.summary-entry [class*='radiobutton'],
 .summary-entry [data-name^='selected-item'],
-.summary-entry [class*='selected-item'] {
-  color: $text-dark-primary;
-  font-family: $font-family;
-  font-style: normal;
-  font-size: $size-font-body-default;
-  line-height: 160%;
-  margin-top: $spacing-100;
-  margin-bottom: $spacing-100;
-}
-
+.summary-entry [class*='selected-item'],
 .summary-entry [data-name^='textinput'],
 .summary-entry [class*='textinput'] {
   color: $text-dark-primary;
