--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -22,7 +22,10 @@ main .form form .panel-repeatable-panel {
             position: relative;
             margin-bottom: $spacing-600;
 
-            &__language {
+            &__language,
+            .repeatable-entry__cardTitle,
+            .repeatable-entry__course,
+            .repeatable-entry__title {
                 color: $color-primary-navy;
                 font-feature-settings: 'liga' off, 'clig' off;
                 font-family: $font-family;
@@ -32,6 +35,7 @@ main .form form .panel-repeatable-panel {
                 line-height: 130%;
                 letter-spacing: $letter-spacing-default;
             }
+
 
             &__proficiency {
                 color: $text-primary;
@@ -105,11 +109,11 @@ main .form form .panel-repeatable-panel {
 
     .field-wrapper {
         color: $text-primary;
-       /* margin-bottom: $spacing-500;*/
+        /* margin-bottom: $spacing-500;*/
     }
 
     .field-label {
-       /* margin-bottom: $spacing-300;*/
+        /* margin-bottom: $spacing-300;*/
     }
 
     .item-remove {
@@ -120,7 +124,7 @@ main .form form .panel-repeatable-panel {
         display: inline-block;
         width: 16px;
         height: 16px;
-        background-image: url('./images/icon-repeatable-panel-plus-blue.svg');
+        background-image: url('images/icon-repeatable-panel-plus-blue.svg');
         background-size: contain;
         background-repeat: no-repeat;
         margin-right: 8px;
@@ -143,7 +147,7 @@ main .form form .panel-repeatable-panel {
             display: flex;
             gap: 20px;
             margin-top: 65px;
-            
+
             .btn-cancel{
                 color: $text-dark-primary;
                 background-color: $color-white;
