--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,8 +1,8 @@
 @use '../../../../styles/settings' as *;
 
 .field-summary {
-  padding: 64px 0;
-  border-top: solid 2px #b0c4de;
+  padding: $spacing-600 0;
+  border-top: solid 2px $color-border-secondary;
 
   .edit {
     width: 56px;
@@ -37,55 +37,91 @@
     }
   }
 
-  .summary-entry__language,
-  .summary-entry__course,
-  .summary-entry__title,
-  .summary-entry__licenceClassTitle,
-  .summary-entry__endorsementsTitle {
+  .summary-entry {
     color: $text-dark-primary;
     font-family: $font-family;
-    font-style: normal;
-    line-height: 160%;
-    font-weight: 700;
-    font-size: $size-font-body-default;
-    margin-bottom: $spacing-100;
-  }
-
-  .summary-entry__personal-summary {
-    color: $text-dark-primary;
-    font-family: $font-family;
-    font-style: normal;
-    line-height: 160%;
     font-size: $size-font-body-large;
-    font-weight: $font-weight-regular;
-    letter-spacing: 0;
-    margin-bottom: $spacing-100;
-  }
-
-  .summary-entry__employmentDetails,
-  .summary-entry__description,
-  .summary-entry__summary,
-  .summary-entry__days_you_can_work,
-  .summary-entry__hours_you_can_work,
-  .summary-entry__specific_days_cb,
-  .summary-entry__proficiency,
-  .summary-entry__cb_english_proficiency,
-  .summary-entry__licence-class,
-  .summary-entry__reliable-transport,
-  .summary-entry__endorsements {
-    color: $text-dark-primary;
-    font-family: $font-family;
     font-style: normal;
-    font-size: $size-font-body-default;
+    font-weight: $font-weight-regular;
     line-height: 160%;
-    margin-top: $spacing-100;
-    margin-bottom: $spacing-100;
+    letter-spacing: 0;
+    border-bottom: 1px solid $stroke-tertiary;
+    padding-top: $spacing-450;
+    padding-bottom: $spacing-450;
+    margin-bottom: $spacing-300;
+
+    &:last-of-type {
+      border-bottom: none;
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+
+    [data-name^='selected-item-job-title'],
+    [class*='selected-item-job-title'],
+    [data-name^='radiobutton'],
+    [class*='radiobutton'],
+    [data-name^='selected-item'],
+    [class*='selected-item'],
+    [data-name^='textinput'],
+    [class*='textinput'] {
+      color: $text-dark-primary;
+      font-family: $font-family;
+      font-style: normal;
+      font-size: $size-font-body-default;
+      line-height: 160%;
+      margin-top: $spacing-100;
+      margin-bottom: $spacing-100;
+    }
+
+    &__language,
+    &__course,
+    &__title,
+    &__licenceClassTitle,
+    &__endorsementsTitle {
+      color: $text-dark-primary;
+      font-family: $font-family;
+      font-style: normal;
+      line-height: 160%;
+      font-weight: 700;
+      font-size: $size-font-body-default;
+      margin-bottom: $spacing-100;
+    }
+
+    &__personal-summary {
+      color: $text-dark-primary;
+      font-family: $font-family;
+      font-style: normal;
+      line-height: 160%;
+      font-size: $size-font-body-large;
+      font-weight: $font-weight-regular;
+      letter-spacing: 0;
+      margin-bottom: $spacing-100;
+    }
+
+    &__employmentDetails,
+    &__description,
+    &__summary,
+    &__days_you_can_work,
+    &__hours_you_can_work,
+    &__specific_days_cb,
+    &__proficiency,
+    &__cb_english_proficiency,
+    &__licence-class,
+    &__reliable-transport,
+    &__endorsements {
+      color: $text-dark-primary;
+      font-family: $font-family;
+      font-style: normal;
+      font-size: $size-font-body-default;
+      line-height: 160%;
+      margin-top: $spacing-100;
+      margin-bottom: $spacing-100;
+    }
   }
 
   .summary-entry:first-child,
   .item:first-child {
     padding-top: 0;
-    padding-bottom: 0;
   }
 
   &.field-summary-work-preferences .p-small {
@@ -106,7 +142,7 @@
       align-items: center;
       flex-wrap: nowrap;
 
-      .summary-entry__title {
+      &__title {
         font-weight: bold;
         margin-bottom: 0;
       }
@@ -182,43 +218,7 @@
     text-align: right;
   }
 
-  .address i { background-image: url('/icons/icon-repeatable-panel-edit-blue.svg'); }
-  .phone i { background-image: url('/icons/icon-repeatable-panel-edit-blue.svg'); }
-  .email i { background-image: url('/icons/icon-repeatable-panel-edit-blue.svg'); }
-}
-
-.summary-entry {
-  color: $text-dark-primary;
-  font-family: $font-family;
-  font-size: $size-font-body-large;
-  font-style: normal;
-  font-weight: $font-weight-regular;
-  line-height: 160%;
-  letter-spacing: 0;
-  border-bottom: 1px solid $stroke-tertiary;
-  padding-bottom: $spacing-300;
-  margin-bottom: $spacing-300;
-}
-
-.summary-entry:last-of-type {
-  border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-.summary-entry [data-name^='selected-item-job-title'],
-.summary-entry [class*='selected-item-job-title'],
-.summary-entry [data-name^='radiobutton'],
-.summary-entry [class*='radiobutton'],
-.summary-entry [data-name^='selected-item'],
-.summary-entry [class*='selected-item'],
-.summary-entry [data-name^='textinput'],
-.summary-entry [class*='textinput'] {
-  color: $text-dark-primary;
-  font-family: $font-family;
-  font-style: normal;
-  font-size: $size-font-body-default;
-  line-height: 160%;
-  margin-top: $spacing-100;
-  margin-bottom: $spacing-100;
+  .address i { background-image: url('/icons/icon-summary-map-blue.svg'); }
+  .phone i { background-image: url('/icons/icon-summary-mobile-blue.svg'); }
+  .email i { background-image: url('/icons/icon-summary-mail-blue.svg'); }
 }
