--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -32,7 +32,7 @@
 }
 
 .wizard {
-  min-height: calc(100vh - $nav-height - $footer-height);
+  min-height: calc(100rem - $nav-height - $footer-height);
   height: 100%;
 
   @media (max-width: 1279px) {
@@ -46,17 +46,17 @@
                   $color-accent 25%,
                   $color-primary-navy 100%
   );
-  
+
   .field-save-changes{
       display: none;
       margin-left: auto;
   }
-  
+
   &.from-review{
       .field-save-changes{
           display: block;
       }
-      
+
       .wizard-button-prev,
       .wizard-button-next{
           display: none;
@@ -66,7 +66,7 @@
   .current-wizard-step {
     @include media('tablet') {
       @media (min-height: 921px) {
-        min-height: calc(100vh - $nav-height - $footer-height);
+        min-height: calc(100rem - $nav-height - $footer-height);
         height: 100%;
       }
     }
