replace vh with rem for all min-height and height values

--- a/blocks/form/components/modal/modal.css
+++ b/blocks/form/components/modal/modal.css
@@ -25,7 +25,7 @@ body.modal-open {
   }
 
   .modal dialog .modal-content {
-    max-height: calc(100vh - 90px);
+    max-height: calc(100rem - 90px);
   }
 }
 
