--- a/styles/bootstrap/mixins/_backdrop.scss
+++ b/styles/bootstrap/mixins/_backdrop.scss
@@ -5,7 +5,7 @@
   left: 0;
   z-index: $zindex;
   width: 100vw;
-  height: 100vh;
+  height: 100rem;
   background-color: $backdrop-bg;
 
   // Fade for backdrop
