--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -70,8 +70,8 @@
 
   .current-wizard-step:not([data-index='1']) {
     @include media('desktop') {
-      padding: $spacing-600 0;
-      margin: 32px auto;
+      padding: $spacing-800 0;
+      margin: $spacing-600 auto;
       width: 100%;
       max-width: 1038px;
     }
