--- a/styles/forms/_select.scss
+++ b/styles/forms/_select.scss
@@ -4,7 +4,22 @@
 @use '../settings' as *;
 @use '../base/forms' as *;
 
-// Shared select styling
+// 1. Shared Chevron Mixin
+@mixin select-chevron {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: $spacing-400;
+  transform: translateY(-48%);
+  width: 1.5rem;            // 24px
+  height: 1.5rem;
+  background-image: url('/icons/icon-chevron-down.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  pointer-events: none;
+}
+
+// 2. Shared Select Mixin
 @mixin base-select-style {
   cursor: pointer;
   border-radius: $border-radius-mid;
@@ -13,24 +28,17 @@
   font-family: $font-family;
   font-size: 20px;
   line-height: 120%;
-  appearance: none; // changed from base-select to none for broader compatibility
+  appearance: none;
   width: 100%;
-  background-color: $color-white; // <-- Added to give the select a white background
+  height: 56px;
+  background-color: $color-white;
 
   &:focus-visible,
   &:focus,
   &:active,
   &:hover {
     border-color: $stroke-accent;
-    outline: $stroke-accent;
-  }
-
-  &::picker-icon {
-    transition: 0.4s rotate;
-  }
-
-  &:open::picker-icon {
-    rotate: 180deg;
+    outline: none;
   }
 
   option {
@@ -57,16 +65,32 @@
   }
 }
 
+
 .drop-down-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+
   label {
     @extend %label-common-style;
   }
 
   select {
     @include base-select-style;
+    position: relative;
+  }
+
+  &::after {
+    @include select-chevron;
   }
 }
 
+
 select[required] {
   @include base-select-style;
+  position: relative;
+}
+
+select[required]::after {
+  @include select-chevron;
 }
