Styles: search icon update & chevron

--- a/blocks/form/components/typeahead/typeahead.scss
+++ b/blocks/form/components/typeahead/typeahead.scss
@@ -10,7 +10,7 @@
   }
 
   &::after {
-    content: url('../../../../icons/search.svg');
+    content: url('../../../../icons/icon-search.svg');
     display: block;
     width: 24px;
     height: 24px;
