--- a/styles/base/_wizard-buttons.scss
+++ b/styles/base/_wizard-buttons.scss
@@ -23,7 +23,7 @@
 
 .wizard .wizard-button-wrapper {
   height: 100%;
-  max-height: 83px;
+  max-height: $footer-height;
   position: fixed;
   bottom: 0;
   left: 0;
