--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -66,7 +66,7 @@ p {
 
 .form-wrapper p {
   margin: 0;
-  padding-bottom: $spacing-100;
+  // padding-bottom: $spacing-100;
 }
 
 /* ------------------------------
@@ -192,42 +192,42 @@ ul li {
 /* ------------------------------
    Form Heading Adjustments
 ------------------------------ */
-.wizard .panel-formwelcome .panel-formwelcome__item-content p {
-  margin: 0;
-  @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-}
+// .wizard .panel-formwelcome .panel-formwelcome__item-content p {
+//   margin: 0;
+//   @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+// }
 
-.form-wrapper [class*='field-wrapper'] {
-  h1 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
+// .form-wrapper [class*='field-wrapper'] {
+//   h1 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
 
-  h2 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
+//   h2 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
 
-  h3 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
+//   h3 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
 
-  h4 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
+//   h4 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
 
-  h5 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
+//   h5 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
 
-  h6 {
-    margin: 0;
-    @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
-  }
-}
+//   h6 {
+//     margin: 0;
+//     @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+//   }
+// }
 
 /* ------------------------------
    Subtitle
@@ -275,7 +275,7 @@ main.wizard--bg-dark .subtitle {
   font-weight: lighter;
   line-height: 130%;
   margin: 0;
-  @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+  // @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
 
   p {
     margin: 0;
@@ -291,7 +291,7 @@ main.wizard--bg-light .p-large p {
   font-style: normal;
   line-height: 130%;
   margin: 0;
-  @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+  // @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
 
   p {
     margin: 0;
