--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -29,6 +29,7 @@
 // Wizard container
 .wizard {
   padding-top: $spacing-600;
+  padding-bottom: 120px; // more spacing at the bottom to be able to scroll through past the last content
   min-height: $wizard-body-height;
   height: 100%;
   background: linear-gradient(
@@ -39,7 +40,11 @@
 
   @include media('tablet') {
     padding-top: $spacing-700;
-    padding-bottom: 120px;
+    min-height: $wizard-body-height-tablet;
+  }
+
+  @include media('desktop') {
+    min-height: $wizard-body-height-desktop;
   }
 
   .field-save-changes {
